formatting in SVM notebook

--- a/Practice/SVMs/Support Vector Machines.ipynb
+++ b/Practice/SVMs/Support Vector Machines.ipynb
@@ -4,7 +4,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Support Vector Machines: practical session\n",
+    "This notebook is part of the [Machine Learning class](https://github.com/erachelson/MLclass) by [Emmanuel Rachelson](https://personnel.isae-supaero.fr/emmanuel-rachelson?lang=en).\n",
+    "\n",
+    "This notebook is joint work by Luca Mossina (primary author), Erwan Lecarpentier and Emmanuel Rachelson.\n",
+    "\n",
+    "License: CC-BY-SA-NC."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div style=\"font-size:22pt; line-height:25pt; font-weight:bold; text-align:center;\">Support Vector Machines: practical session</div>\n",
     "\n",
     "In this notebook you will find some data challenges to experiment with SVMs."
    ]
@@ -23,7 +34,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -82,9 +93,13 @@
     "\n",
     "The file is available online at: http://users.stat.ufl.edu/~winner/datasets.html  \n",
     "\n",
-    " - Find the corresponding file\n",
-    " - save it in the 'data' directory\n",
-    " - import it as a pandas dataframe. No cheating, it can be done with a pandas function.\n",
+    "<div class=\"alert alert-warning\">**Exercice 1**<br>\n",
+    "<ul>\n",
+    "<li> Find the corresponding file\n",
+    "<li> save it in the 'data' directory\n",
+    "<li> import it as a pandas dataframe. No cheating, it can be done with a pandas function.\n",
+    "</ul>\n",
+    " </div>\n",
     " \n",
     "Your dataframe should have 1221 rows and 2 columns, which you'll name respectively 'attendance', 'tolerance'."
    ]
@@ -109,11 +124,9 @@
     }
    ],
    "source": [
-    "# === Solution\n",
-    "data_file = 'data/atheist.dat'\n",
-    "df = pd.read_csv(data_file, sep='\\s+', header=None, names=['attendance', 'tolerance'])\n",
-    "print(df.shape)       # --> (nrow, ncols)\n",
-    "print(df.iloc[0:5,:]) # print first lines of dataset"
+    "# %load solutions/code1.py\n",
+    "### WRITE YOUR CODE HERE\n",
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
   },
   {
@@ -127,7 +140,8 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "In 1976, the inventors of SVMs were probably still learning to ride their bycicles.  \n",
+    "Vapnik was born in 1936, so in 1976 he was already 40. The first SVM paper came out in 1964 (\"On a perceptron class\", by Vapnik and Chervonenkis) although the kernel trick wasn't used before 1992 (in a paper by Boser, Guyon and Vapnik).\n",
+    "\n",
     "Let us see whether it make any sense to use them to predict the tolerance of US citizens towards atheists."
    ]
   },
@@ -136,7 +150,10 @@
    "metadata": {},
    "source": [
     "First of all, what can we learn having a strong look at the data and their description?  \n",
+    "\n",
+    "<div class=\"alert alert-warning\">**Exercice 1**<br>\n",
     "Do we have categorical, binary, continuous data?\n",
+    "</div>\n",
     "\n",
     "These are fundamental questions, which you'll ask yourselves for the rest of your (data science) life.\n",
     "Often, collegues or clients have no idea about these formalities; they have a problem and they ask you to provide a good enough solution."
@@ -146,7 +163,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "*Answer* : it looks like we could consider them as continuous. However, they were recorded on a step scale. [...]"
+    "*Your Answer* : "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert-danger\"><a href=\"#answers1-3\" data-toggle=\"collapse\">**Correction (click to unhide):**</a><br>\n",
+    "<div id=\"answers1-3\" class=\"collapse\">\n",
+    "It looks like we could consider them as continuous. However, they were recorded on a step scale. [...]\n",
+    "</div>\n",
+    "</div>"
    ]
   },
   {
@@ -163,7 +191,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [
     {
@@ -173,7 +201,7 @@
      "traceback": [
       "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "\u001b[0;32m<ipython-input-33-da67ba5f0993>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msvm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSVC\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'auto'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;32m<ipython-input-2-da67ba5f0993>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[0;32mfrom\u001b[0m \u001b[0msklearn\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0msvm\u001b[0m \u001b[0;32mimport\u001b[0m \u001b[0mSVC\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      2\u001b[0m \u001b[0mclf\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mSVC\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mgamma\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0;34m'auto'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m----> 3\u001b[0;31m \u001b[0mclf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfit\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mX\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
       "\u001b[0;31mNameError\u001b[0m: name 'X' is not defined"
      ]
     }
