integrated Luca's last part in SVM practice session

--- a/Practice/SVMs/SVM.ipynb
+++ b/Practice/SVMs/SVM.ipynb
@@ -24,7 +24,7 @@
    "source": [
     "# Introduction\n",
     "\n",
-    "SVMs is a classical Supervised Learning technique.\n",
+    "In this notebook you will find some data challenges to experiment with SVMs.\n",
     "\n",
     "Content:\n",
     "1. [Linear SVMs](#sec1)<br>\n",
@@ -32,9 +32,10 @@
     "1.2 [Tune your linear SVM](#subsec12)\n",
     "2. [SVM with kernels](#sec2)<br>\n",
     "2.1 [Warm-up: Americans and Atheism  (OPTIONAL)](#subsec21)<br>\n",
-    "2.2 [Back to basics](#subsec22)<br>\n",
+    "2.2 [Back to basics (OPTIONAL)](#subsec22)<br>\n",
     "2.3 [Kernels](#subsec23)\n",
-    "3. [Application](#sec3)"
+    "3. [Application: Binary classification](#sec3)\n",
+    "4. [Application: Multi-label Classification (MLC)](#sec4)"
    ]
   },
   {
@@ -850,6 +851,302 @@
     "### WRITE YOUR CODE HERE\n",
     "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# <a id=\"sec4\"></a> 4. Application: Multi-label Classification (MLC)\n",
+    "This is a hard one."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We'll see an application which is both harder and less common than binary classification, that of **multi-label classification** (MLC).  \n",
+    "Given a list of possible labels, the problem consists in finding one **or more** labels associated to a data point.  \n",
+    "For instance, imagine extracting the keywords from a newspaper article. Possibly many labels can be associated to a text; or for example classifing the elements composing an image\n",
+    "\n",
+    "Given a set of labels $\\mathcal{L} = \\{l_1, l_2, ..., l_k\\} \\in \\{0,1\\}^k$, we want to map elements of a feature space $\\mathcal{X}$ to a subset of $\\mathcal{L}$:  \n",
+    "\n",
+    "$$h : \\mathcal{X} \\longrightarrow \\mathcal{P}(\\mathcal{L})$$\n",
+    "\n",
+    "The two typical approaches for such problems are known as **Binary Relevance** (BR) and **Label Powerset** (LP).  \n",
+    "\n",
+    " - BR: each label in $\\mathcal{L}$ is a binary classification problem, $h_{i} : \\mathcal{X} \\longrightarrow l_{i}, l_{i} \\in \\{0,1\\}, i = 1, ..., |\\mathcal{L}|$.\n",
+    "\n",
+    " - LP: transforms a problem of MLC into one of multiclass classification, mapping elements $x \\in \\mathcal{X}$ directly to $s \\in \\mathcal{P}(\\mathcal{L})$.  \n",
+    " This method becomes rapidly inapplicable as the number of $s$ grows exponentially.\n",
+    " \n",
+    " Many other variations exist, but for today we'll focus on BR, the most straightforward to implement.\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">**Exercice**<br>\n",
+    "<ul>\n",
+    "<li> find a suitable package to load the file at `data/yeast.arff`.  <br>\n",
+    "    Hint: [`scipy.io`](https://docs.scipy.org/doc/scipy/reference/io.html) and _read the doc_.\n",
+    "<li> Store the data in a pandas dataframe.<br>\n",
+    "    Hint: columns of classes will be encoded as 'utf-8', we need integers, look for 'str.decode('utf-8')'\n",
+    "<li> check dataset: you should have 2417 samples $\\times$ 117 columns (103 features + 14 labels)\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/code8.py\n",
+    "### WRITE YOUR CODE HERE\n",
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">**Exercice**<br>\n",
+    "<ul>\n",
+    "<li> Manually, fit a SVM classifier for each label in the dataset\n",
+    "<li> Apply a cross-validation of 60 ∕ 40: 60% of datapoints to train the model, 40% to test it  <br>\n",
+    "   Remember: it is good practice to **randomly shuffle** the data, in case the data are ordered w.r.t. some data-dependent criterion.\n",
+    "<li> Report some performance measure\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/code9.py\n",
+    "### WRITE YOUR CODE HERE\n",
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "You probably wondered _how_ to evaluate the performance of a MLC algorithm: well spotted, this is no easy task.   \n",
+    "Evaluating classification performance can be challenging in binary classification, in multi-label classification this becomes harder and more ambiguous.\n",
+    "\n",
+    "The best starting point is the _Hamming_ loss. See for instance:\n",
+    " - https://en.wikipedia.org/wiki/Multi-label_classification#Statistics_and_evaluation_metrics\n",
+    "\n",
+    "This measures the average number of operations it would take to turn the vector of predictions $\\mathbf{y}$ into the correct one.\n",
+    "$$ H_L  = 1 - \\frac{1}{N} \\sum_{i=1}^{N}\n",
+    "\t\t\t\t\t\t\\left(\\frac{1}{L} \\sum_{k=1}^{L}\n",
+    "\t\t\t\t\t\t\t{I}\\left(y_k^i = \\widehat{y}_k^i\\right)\\right).$$"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">**Exercice**<br>\n",
+    "<ul>\n",
+    "<li> For 5 minutes: challenge yourself to speed-code a simple hamming loss function; it is useful, we promise.\n",
+    "<li> **AFTER** 5 minutes, feel free to cheat and read the sklearn doc\n",
+    "<li> from the Doc, look for other metrics and run them (accuracy, precision, recall, etc.). For reference, you can have a rapid look at the tables in:  <br>\n",
+    "   page 349, https://link.springer.com/content/pdf/10.1007%2Fs10994-011-5256-5.pdf\n",
+    "</ul>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Hints\n",
+    "def hamming_loss(predictions_list, observations_list):\n",
+    "    assert len(predictions_list) == len(observations_list)\n",
+    "    \n",
+    "    # TODO\n",
+    "    \n",
+    "    return loss"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# === Solution\n",
+    "\n",
+    "from sklearn.metrics import hamming_loss\n",
+    "print(\"Hamming Loss:\", hamming_loss(y_test[\"Class1\"], y_pred_01))\n",
+    "\n",
+    "from sklearn.metrics import accuracy_score\n",
+    "print(\"Accuracy:\", accuracy_score(y_test[\"Class1\"], y_pred_01))\n",
+    "\n",
+    "# ..."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Two important factors to keep in mind are the _Label Density_ and the _Label Cardinality_ .  \n",
+    "\n",
+    "Let us denote by $\\textbf{y}^i$ and $\\textbf{{y'}}^i$ respectively the observed  and predicted target vectors for the $i$-th row.\n",
+    "\n",
+    "$ LCard = \\frac{1}{N} \\sum_{i=1}^{N} \\left|\\textbf{y}^{i} \\right|$, tells us about the multi-labelness of data, yielding the average number of labels per target across the dataset.  \n",
+    "\n",
+    "$ LDens = \\frac{LCard}{|\\mathcal{L}|} \\times 100 = \\frac{1}{N |\\mathcal{L}|} \\sum_{i=1}^{N} \\left|\\textbf{y}^{i} \\right| \\times 100$, expresses what proportion of the available labels are, on average, associated to a data point $\\textbf{x}$.  \n",
+    "We can use these to measure how sparse how our label vectors are.  \n",
+    "Take a vector $y = [l_1, l_2, \\dots, l_{100}] $ in which only 2 of the labels take value 1: if we completely miss our prediction, and predict 2 other labels, 96 out of 100 labels will be \"correctly\" predicted as zero.  \n",
+    "\n",
+    "In MLC, it is good practice to use multiple metrics and compare them: the challenge is more complicated and focusing solely on one source of information could hide erros."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert alert-warning\">**Exercice**<br>\n",
+    "Measure the `LCard` and `LDens` of your predictions on  `yeast.arff`\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def label_cardinality(dataset):\n",
+    "    # TODO\n",
+    "    pass\n",
+    "\n",
+    "def label_density(dataset):\n",
+    "    # TODO\n",
+    "    pass"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "We have seen how powerful and versatile SVMs are. In MLC meta-algorithms, we have the concept of _base classifier_; this is the actual supervised learning tool that is giving us an estimate.  \n",
+    "Often, the SVM is the best performing one, thus the default algorithm for many libraries."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "**Mini-challenges** :  \n",
+    "\n",
+    "<div class=\"alert alert-warning\">**Step 1**<br>\n",
+    "Read the [documentation of sklearn on MLC](http://scikit-learn.org/stable/modules/multiclass.html) and experiment with different algorithms (no more manual coding).<br>\n",
+    "We suggest you first try the **Classifiers Chains** (CC): see resources below.  <br>\n",
+    "It is one of the reference meta-algorithms in MLC, and it gives its best when SVM are used as _base classifier_.\n",
+    "</div>\n",
+    "\n",
+    "Strong with your intuitions on **metrics** (hamming loss, accuracy, etc.), **model validation** (CV, k-fold, etc.) and different **MLC architectures** (BR, CC), you are equiped with the right tools to show off your data-science awereness:\n",
+    "\n",
+    "<div class=\"alert alert-warning\">**Step 2**<br>\n",
+    "Compare different methods on a **new dataset**:  http://mulan.sourceforge.net/datasets-mlc.html .  <br>\n",
+    "From the list above, we suggest you try either on `emotions`, `scene` or `music`. They are simple enough to get you started rapidly and you can conveniently find them in the `data` directory. Inspect carefully the datasets and change accordingly the names of the classes and of the features.<br>\n",
+    "Suggestion: aim for a results table where you can cross at least 2 MLC algos (CC, BR, etc.) with their respective Hamming Loss, accuracy etc.\n",
+    "</div>\n",
+    "\n",
+    "<div class=\"alert alert-warning\">**Step 3**<br>\n",
+    "Reflect on the weak points of SVM and the MLC approaches you have tested.  <br>\n",
+    "Hint: what if we had 300 labels? How computationally costly would it be to fit 300 independent SVM? maybe with hundreds of features and tens of thousand of data points? <br>\n",
+    "Hint: wht about label interdependency in BR approaches?<br>\n",
+    "During the next weeks, we'll explore different paradigms in supervised learning. Your spectrum of choices will broaden and consequently your options: harder choices, greater benefits. <br>\n",
+    "</div>\n",
+    " \n",
+    " Resources:\n",
+    "  - Metrics: http://scikit-learn.org/stable/modules/classes.html#module-sklearn.metrics\n",
+    "  - Model Validation:\n",
+    "    - http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.cross_validate.html\n",
+    "    - http://scikit-learn.org/stable/modules/generated/sklearn.model_selection.KFold.html#sklearn.model_selection.KFold\n",
+    "  - MLC architectures:\n",
+    "    - https://en.wikipedia.org/wiki/Classifier_chains\n",
+    "      - sklearn http://scikit-learn.org/stable/modules/generated/sklearn.multioutput.ClassifierChain.html#sklearn.multioutput.ClassifierChain\n",
+    "      http://scikit-learn.org/stable/auto_examples/multioutput/plot_classifier_chain_yeast.html#sphx-glr-auto-examples-multioutput-plot-classifier-chain-yeast-py\n",
+    "      - specialized MLC python package: http://scikit.ml/api/skmultilearn.problem_transform.cc.html#skmultilearn.problem_transform.ClassifierChain\n",
+    "    - https://en.wikipedia.org/wiki/Multi-label_classification\n",
+    "  \n",
+    "It is important, as a data scientist, to develop a strong intuition.  \n",
+    "You have seen cases where model interpretation is most important (stats, linear regression); this will not be one of them.  \n",
+    "SVM are mostly used as powerful prediction tools. The intuition will be rather in **when** to use it (big/small data, etc) and **how** to use it (tuning parameters, choosing kernels).\n",
+    " "
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mini-challenge n. 1 "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# %load solutions/code10.py\n",
+    "### WRITE YOUR CODE HERE\n",
+    "# If you get stuck, uncomment the line above to load a correction in this cell (then you can execute this code).\n"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "#### Mini-challenge n.2: model comparison"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "### Just a few lines to get you started but you're on your own for this one!\n",
+    "\n",
+    "# === Hints: starting with a new dataset\n",
+    "import pandas as pd\n",
+    "import scipy\n",
+    "from scipy.io import arff\n",
+    "\n",
+    "# Load scene.arff via dedicate scipy.io function\n",
+    "raw_data_2, metadata_2 = arff.loadarff('data/scene.arff')\n",
+    "print(\"nrows:\", len(raw_data_2))    # 2417\n",
+    "print(\"ncols:\", len(raw_data_2[0])) #  117\n",
+    "\n",
+    "df2 = pd.DataFrame(raw_data)\n",
+    "print(\"dimensions:\", df2.shape)           # -> (2417, 117)\n",
+    "print(df.head(5))         # for free, we get column names\n",
+    "print(type(df.iloc[0,0])) # -> <class 'bytes'> ## we want to have plain {0,1} integers\n",
+    "\n",
+    "classes_list = [name for name in df2.columns if \"Class\" in name]\n",
+    "print(classes_list)  # -> ['Class1', 'Class2', ... , 'Class14']"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
