typos corrected on SVM class and corrections added on SVM practice session

--- a/Practice/SVMs/SVM.ipynb
+++ b/Practice/SVMs/SVM.ipynb
@@ -68,6 +68,20 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert-danger\"><a href=\"#answers1\" data-toggle=\"collapse\">**Correction (click to unhide):**</a><br>\n",
+    "<div id=\"answers1\" class=\"collapse\">\n",
+    "SVM is a supervised learning model used for **classification and regression** analysis.<br>\n",
+    "It is built on the idea of **separating the data points by a hyperplane** maximizing the distance between the closest points and the hyperplane.\n",
+    "This distance is called **the margin**.\n",
+    "The points on each side of the hyperplane are then classified with different classes.\n",
+    "</div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "## <a id=\"subsec11\"></a> 1.1 Let's play"
    ]
   },
@@ -122,6 +136,18 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert-danger\"><a href=\"#answers1-1-1\" data-toggle=\"collapse\">**Correction (click to unhide):**</a><br>\n",
+    "<div id=\"answers1-1-1\" class=\"collapse\">\n",
+    "This data set cannot be completely separated by a straight line as one cannot avoid points of the same class to be on both sides of the line.<br>\n",
+    "To handle this, we can increase the tolerance, that is to say allowing a few points to lie on the wrong side of the hyperplane.\n",
+    "</div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "Let's apply the SVM method to this dataset. To this purpose, we are going to use scikit-learn, a Python library providing most of the common Machine Learning off the shelf methods including SVM.  \n",
     "Their documentation page for this method can be found here: http://scikit-learn.org/stable/modules/svm.html"
    ]
@@ -162,6 +188,17 @@
    "metadata": {},
    "source": [
     "Your answer :"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "<div class=\"alert-danger\"><a href=\"#answers1-1-3\" data-toggle=\"collapse\">**Correction (click to unhide):**</a><br>\n",
+    "<div id=\"answers1-1-3\" class=\"collapse\">\n",
+    "The support vectors are data points that lie directly on the margin, or on the wrong side of the margin for their class. They _support_ the maximal margin hyperplane in the sense that if these points were moved slightly then the maximal margin hyperplane would move as well.\n",
+    "</div>\n",
+    "</div>"
    ]
   },
   {
@@ -248,13 +285,28 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert-danger\"><a href=\"#answers1-2-2\" data-toggle=\"collapse\">**Correction (click to unhide):**</a><br>\n",
+    "<div id=\"answers1-2-2\" class=\"collapse\">\n",
+    "The best values of $C$ are in $[10,25]$ they are equivalent.\n",
+    "<br>\n",
+    "With a finer meshing for $C$, we expect to see a piecewise constant function as we have a finite data set. Each jump of the function corresponds to the addition / removal of a new vector in the set of the misclassified points.\n",
+    "</div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <a id=\"sec2\"></a> 2. SVMs with kernels"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# === imports\n",
@@ -330,7 +382,8 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
-    "code_folding": []
+    "code_folding": [],
+    "collapsed": true
    },
    "outputs": [],
    "source": [
@@ -375,6 +428,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert-danger\"><a href=\"#answers2-1-2-1\" data-toggle=\"collapse\">**Correction (click to unhide):**</a><br>\n",
+    "<div id=\"answers2-1-2-1\" class=\"collapse\">\n",
+    "The data take their values in a discrete space, hard to interprete numerically as well as practically. We could have imagined continuous data for the same descrition purpose.\n",
+    "</div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "These are fundamental questions, which you'll ask yourselves for the rest of your (data science) life.\n",
     "Often, collegues or clients have no idea about these formalities; they have a problem and they ask you to provide a good enough solution."
    ]
@@ -394,7 +458,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from sklearn.svm import SVC\n",
@@ -416,7 +482,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "attend = df['attendance'] # WARNING: you are passing a reference.\n",
@@ -442,7 +510,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "df['zeros'] = 0 # dummy zeros\n",
@@ -512,7 +582,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# execute and ignore the following two lines\n",
@@ -558,7 +630,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "NPOINTS = 100\n",
@@ -591,7 +665,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a, b, c = 1, 1, 1\n",
@@ -606,7 +682,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a, b, c = -8, 1, 2\n",
@@ -630,7 +708,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "a, b, c = ?,?,?\n",
@@ -678,7 +758,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def plot_data(csv_file_name):\n",
@@ -711,7 +793,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "from myplot import plot_SVC\n",
@@ -727,6 +811,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -756,6 +841,17 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
+    "<div class=\"alert-danger\"><a href=\"#answers2-3-2\" data-toggle=\"collapse\">**Correction (click to unhide):**</a><br>\n",
+    "<div id=\"answers2-3-2\" class=\"collapse\">\n",
+    "We could use cross validation to do this selection.\n",
+    "</div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
     "# <a id=\"sec3\"></a> 3. Application: Binary classification"
    ]
   },
@@ -770,6 +866,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": true
    },
    "outputs": [],
@@ -798,6 +895,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -820,6 +918,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -843,6 +942,7 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "collapsed": true,
     "scrolled": false
    },
    "outputs": [],
@@ -900,7 +1000,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code8.py\n",
@@ -925,7 +1027,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code9.py\n",
@@ -966,7 +1070,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# === Hints\n",
@@ -981,7 +1087,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# === Solution\n",
@@ -1024,7 +1132,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "def label_cardinality(dataset):\n",
@@ -1099,7 +1209,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code10.py\n",
@@ -1117,7 +1229,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": [
     "### Just a few lines to get you started but you're on your own for this one!\n",
@@ -1144,7 +1258,9 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "collapsed": true
+   },
    "outputs": [],
    "source": []
   }
@@ -1165,7 +1281,20 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
