--- a/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
+++ b/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
@@ -17,7 +17,7 @@
     }
    },
    "source": [
-    "<div style=\"font-size:22pt; line-height:25pt; font-weight:bold; text-align:center;\">Support Vector Machines,<br> the bias-Variance tradeoff<br> and a short introduction to kernel theory</div>\n",
+    "<div style=\"font-size:22pt; line-height:25pt; font-weight:bold; text-align:center;\">Support Vector Machines,<br> the Bias-Variance tradeoff<br> and a short introduction to kernel theory</div>\n",
     "\n",
     "1. [A geometrical approach to Machine Learning: margin maximization](#sec1)\n",
     "    1. [The notion of margin](#sec1-1)\n",
@@ -70,8 +70,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:19:58.893665Z",
-     "start_time": "2018-10-16T14:19:56.253528Z"
+     "end_time": "2018-10-17T07:10:40.712439Z",
+     "start_time": "2018-10-17T07:10:37.381320Z"
     },
     "nbpresent": {
      "id": "66f910f5-e213-4475-9479-db956975fa33"
@@ -117,8 +117,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:20:03.158077Z",
-     "start_time": "2018-10-16T14:20:02.934145Z"
+     "end_time": "2018-10-17T07:12:24.951353Z",
+     "start_time": "2018-10-17T07:12:24.663815Z"
     },
     "nbpresent": {
      "id": "bacb254c-c598-4484-b12f-d9c3b9c3a1d0"
@@ -126,7 +126,7 @@
    },
    "outputs": [],
    "source": [
-    "fig_size=(7,7)\n",
+    "fig_size=(10,10)\n",
     "fig=plt.figure(figsize=fig_size, dpi= 80, facecolor='w', edgecolor='k')\n",
     "plt.scatter(Xblue[:,0],Xblue[:,1],c='b',s=20)\n",
     "plt.scatter(Xred[:,0],Xred[:,1],c='r',s=20)\n",
@@ -186,8 +186,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:24:16.975641Z",
-     "start_time": "2018-10-16T14:24:16.970017Z"
+     "end_time": "2018-10-17T07:26:57.045626Z",
+     "start_time": "2018-10-17T07:26:57.039746Z"
     },
     "nbpresent": {
      "id": "a077da5d-794e-45b6-8349-db14f8f26612"
@@ -232,8 +232,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:28:14.320831Z",
-     "start_time": "2018-10-16T14:28:14.064926Z"
+     "end_time": "2018-10-17T07:45:10.585371Z",
+     "start_time": "2018-10-17T07:45:10.274759Z"
     },
     "nbpresent": {
      "id": "a263ab46-84c6-44ee-b063-a2d86d75f4c5"
@@ -272,11 +272,11 @@
     "<div class=\"alert alert-danger\"><a href=\"#answer2\" data-toggle=\"collapse\">**Ready to see the answer? (click to expand)**</a><br>\n",
     "<div id=\"answer2\" class=\"collapse\">\n",
     "We have $w=M w'$ and $w_0 = M w'_0$, so the problem becomes:\n",
-    "$$\\max_{M,w,w_0} M$$\n",
+    "$$\\max_{M,w',w'_0} M$$\n",
     "$$y_i(M w'^Tx_i + M w'_0) \\geq M, \\forall i \\in [1,N]$$\n",
     "$$\\|M w'\\| = 1$$\n",
     "And more simply:\n",
-    "$$\\max_{M,w,w_0} M$$\n",
+    "$$\\max_{M,w',w'_0} M$$\n",
     "$$y_i(w'^Tx_i + w'_0) \\geq 1, \\forall i \\in [1,N]$$\n",
     "$$M = \\frac{1}{\\|w'\\|}$$\n",
     "And finally, by noting that $\\arg\\max \\frac{1}{\\|w'\\|} = \\arg\\min \\|w'\\|$:\n",
@@ -296,8 +296,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:12:28.757140Z",
-     "start_time": "2018-10-16T15:12:28.668259Z"
+     "end_time": "2018-10-17T08:01:02.838601Z",
+     "start_time": "2018-10-17T08:01:02.539941Z"
     },
     "nbpresent": {
      "id": "768b9afa-8f8b-4c20-bbf3-09b3dcb501aa"
@@ -414,8 +414,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:47:40.715463Z",
-     "start_time": "2018-10-16T14:47:39.050494Z"
+     "end_time": "2018-10-17T08:20:33.118048Z",
+     "start_time": "2018-10-17T08:20:31.482565Z"
     },
     "nbpresent": {
      "id": "47f522cf-664e-498b-850c-9410ab580ed6"
@@ -480,7 +480,7 @@
     "This last formulation with $K$ is not satisfying: instead of having to impose a constraint on the number of misclassifications, we would rather make a compromise between the number of misclassifications and the value of the margin. So the optimization problem turns into:\n",
     "\\begin{equation*}\n",
     "\\begin{array}{c}\n",
-    "\\min\\limits_{w,w_0} \\displaystyle\\frac{1}{2}\\|w\\|^2 + C\\sum\\limits_{i=1}^N \\xi_i\\\\\n",
+    "\\min\\limits_{w,w_0,\\xi} \\displaystyle\\frac{1}{2}\\|w\\|^2 + C\\sum\\limits_{i=1}^N \\xi_i\\\\\n",
     "\\text{ such that } \\forall i=1..N, \\left\\{\\begin{array}{l}\n",
     "y_i\\left(w^T x_i + w_0 \\right)\\geq 1-\\xi_i, \\\\\n",
     "\\xi_i\\geq 0\n",
@@ -549,8 +549,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:49:04.152737Z",
-     "start_time": "2018-10-16T14:49:03.253129Z"
+     "end_time": "2018-10-17T08:49:25.419343Z",
+     "start_time": "2018-10-17T08:49:24.452256Z"
     },
     "nbpresent": {
      "id": "6dce34d9-ee79-4aaa-86c1-274cce55dec2"
@@ -610,8 +610,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:49:24.548818Z",
-     "start_time": "2018-10-16T14:49:14.028059Z"
+     "end_time": "2018-10-17T08:57:21.294670Z",
+     "start_time": "2018-10-17T08:57:12.440094Z"
     },
     "nbpresent": {
      "id": "e5ee8e83-c4af-4aba-a915-8282132cc5ac"
@@ -650,8 +650,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:49:46.232877Z",
-     "start_time": "2018-10-16T14:49:45.966837Z"
+     "end_time": "2018-10-17T08:59:01.341792Z",
+     "start_time": "2018-10-17T08:59:01.042732Z"
     },
     "nbpresent": {
      "id": "92964068-7386-49e4-8fe9-796899ee0576"
@@ -713,8 +713,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:50:14.656579Z",
-     "start_time": "2018-10-16T14:50:14.465132Z"
+     "end_time": "2018-10-17T09:17:17.695024Z",
+     "start_time": "2018-10-17T09:17:17.458007Z"
     },
     "nbpresent": {
      "id": "33109de0-9ac6-4138-8574-b26f067ac171"
@@ -764,8 +764,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T14:50:43.464142Z",
-     "start_time": "2018-10-16T14:50:43.222737Z"
+     "end_time": "2018-10-17T09:19:28.668727Z",
+     "start_time": "2018-10-17T09:19:28.449960Z"
     },
     "nbpresent": {
      "id": "d08cd339-291e-43cb-8689-0e83ee74843f"
@@ -866,8 +866,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:06:50.742232Z",
-     "start_time": "2018-10-16T15:06:50.578123Z"
+     "end_time": "2018-10-17T09:31:09.753023Z",
+     "start_time": "2018-10-17T09:31:09.608714Z"
     },
     "nbpresent": {
      "id": "f25a5d30-b13b-4532-85bd-f61b89f8315e"
@@ -899,8 +899,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:07:08.489543Z",
-     "start_time": "2018-10-16T15:07:08.288799Z"
+     "end_time": "2018-10-17T09:32:31.632506Z",
+     "start_time": "2018-10-17T09:32:31.436536Z"
     },
     "nbpresent": {
      "id": "7547c3d6-ccd0-49cd-97a9-a92ccf7b20b2"
@@ -944,7 +944,7 @@
     "$$K(x_1,x_2)=\\varphi(x_1)^T \\varphi(x_2)$$\n",
     "\n",
     "Then making predictions would boil down to:\n",
-    "$$w'^T x' + w_0 = \\sum_{i=1}^N \\alpha_i y_i K(x_i,x) + w'_0$$\n",
+    "$$w'^T x' + w'_0 = \\sum_{i=1}^N \\alpha_i y_i K(x_i,x) + w'_0$$\n",
     "\n",
     "The interesting thing is that we don't need to compute $\\varphi$ anymore. The function $K$ is known as a **kernel function** and that's what we call the **kernel trick**.\n",
     "\n",
@@ -1003,8 +1003,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:07:26.468976Z",
-     "start_time": "2018-10-16T15:07:25.683313Z"
+     "end_time": "2018-10-17T09:49:55.093983Z",
+     "start_time": "2018-10-17T09:49:54.017292Z"
     },
     "nbpresent": {
      "id": "fa7dbe63-50b7-4b7b-881b-fc1128e18dcc"
@@ -1056,8 +1056,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:07:33.973502Z",
-     "start_time": "2018-10-16T15:07:33.336952Z"
+     "end_time": "2018-10-17T09:52:15.819336Z",
+     "start_time": "2018-10-17T09:52:15.005358Z"
     },
     "nbpresent": {
      "id": "e4dc7f1d-2d84-46bb-aa86-6571b3b7b9e9"
@@ -1089,8 +1089,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:07:43.190645Z",
-     "start_time": "2018-10-16T15:07:42.509880Z"
+     "end_time": "2018-10-17T09:53:02.133194Z",
+     "start_time": "2018-10-17T09:53:01.427684Z"
     },
     "nbpresent": {
      "id": "21e389bc-335d-4b93-aca8-0637b709b2df"
@@ -1221,8 +1221,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:09:14.885287Z",
-     "start_time": "2018-10-16T15:09:05.873147Z"
+     "end_time": "2018-10-17T10:02:12.679567Z",
+     "start_time": "2018-10-17T10:02:03.325253Z"
     },
     "nbpresent": {
      "id": "67bbc140-344b-4510-8635-72df3e783e70"
@@ -1244,8 +1244,23 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:09:38.104746Z",
-     "start_time": "2018-10-16T15:09:17.344113Z"
+     "end_time": "2018-10-17T10:02:33.982004Z",
+     "start_time": "2018-10-17T10:02:33.978693Z"
+    }
+   },
+   "outputs": [],
+   "source": [
+    "print(Xtrain.shape)\n",
+    "print(Xtest.shape)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-17T10:03:45.317040Z",
+     "start_time": "2018-10-17T10:03:24.755376Z"
     },
     "nbpresent": {
      "id": "9e414752-9438-46d7-b036-e2af3e670979"
@@ -1272,8 +1287,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:09:48.829978Z",
-     "start_time": "2018-10-16T15:09:48.825091Z"
+     "end_time": "2018-10-17T10:04:12.020725Z",
+     "start_time": "2018-10-17T10:04:12.015341Z"
     }
    },
    "outputs": [],
@@ -1286,8 +1301,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:09:59.589199Z",
-     "start_time": "2018-10-16T15:09:51.520650Z"
+     "end_time": "2018-10-17T10:04:46.350671Z",
+     "start_time": "2018-10-17T10:04:38.228662Z"
     },
     "scrolled": true
    },
@@ -1324,8 +1339,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:10:20.758683Z",
-     "start_time": "2018-10-16T15:10:20.087179Z"
+     "end_time": "2018-10-17T10:06:40.703495Z",
+     "start_time": "2018-10-17T10:06:40.034585Z"
     },
     "nbpresent": {
      "id": "873f04f7-2a40-45f9-9a03-970f71cd5928"
@@ -1344,8 +1359,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:10:22.993552Z",
-     "start_time": "2018-10-16T15:10:22.698985Z"
+     "end_time": "2018-10-17T10:07:10.059436Z",
+     "start_time": "2018-10-17T10:07:09.766838Z"
     },
     "nbpresent": {
      "id": "bab94b21-0f19-4ab5-81c6-7601ced11400"
@@ -1367,8 +1382,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:10:26.649677Z",
-     "start_time": "2018-10-16T15:10:26.643011Z"
+     "end_time": "2018-10-17T10:07:19.640336Z",
+     "start_time": "2018-10-17T10:07:19.634572Z"
     }
    },
    "outputs": [],
@@ -1383,8 +1398,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:10:28.841794Z",
-     "start_time": "2018-10-16T15:10:28.825839Z"
+     "end_time": "2018-10-17T10:07:34.804877Z",
+     "start_time": "2018-10-17T10:07:34.782525Z"
     }
    },
    "outputs": [],
@@ -1413,8 +1428,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:06.005009Z",
-     "start_time": "2018-10-16T15:11:05.456010Z"
+     "end_time": "2018-10-17T10:10:18.743224Z",
+     "start_time": "2018-10-17T10:10:18.189234Z"
     },
     "nbpresent": {
      "id": "b5946f3a-cce1-4138-af17-0fb2cb788f38"
@@ -1457,8 +1472,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:09.925650Z",
-     "start_time": "2018-10-16T15:11:09.920904Z"
+     "end_time": "2018-10-17T10:11:18.693740Z",
+     "start_time": "2018-10-17T10:11:18.688943Z"
     },
     "nbpresent": {
      "id": "428a56b4-f981-4118-8ce6-9147576f53e4"
@@ -1480,8 +1495,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:10.940466Z",
-     "start_time": "2018-10-16T15:11:10.778873Z"
+     "end_time": "2018-10-17T10:11:22.397436Z",
+     "start_time": "2018-10-17T10:11:22.228400Z"
     },
     "nbpresent": {
      "id": "7aee1580-4a5f-461d-9bdf-9632ae1da643"
@@ -1504,8 +1519,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:14.115499Z",
-     "start_time": "2018-10-16T15:11:11.983317Z"
+     "end_time": "2018-10-17T10:11:54.633264Z",
+     "start_time": "2018-10-17T10:11:52.509255Z"
     },
     "nbpresent": {
      "id": "55d61d0e-45a0-4442-9a27-6ac040e0c599"
@@ -1530,8 +1545,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:15.696049Z",
-     "start_time": "2018-10-16T15:11:15.691668Z"
+     "end_time": "2018-10-17T10:11:56.588189Z",
+     "start_time": "2018-10-17T10:11:56.584335Z"
     },
     "nbpresent": {
      "id": "b9942737-31dd-44c7-a08f-95f7a75a83f5"
@@ -1555,8 +1570,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:18.726320Z",
-     "start_time": "2018-10-16T15:11:18.646628Z"
+     "end_time": "2018-10-17T10:12:08.684827Z",
+     "start_time": "2018-10-17T10:12:08.609525Z"
     },
     "nbpresent": {
      "id": "51a0fedf-7c31-4527-a389-32d247fa89be"
@@ -1578,8 +1593,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:19.694081Z",
-     "start_time": "2018-10-16T15:11:19.564836Z"
+     "end_time": "2018-10-17T10:12:12.929006Z",
+     "start_time": "2018-10-17T10:12:12.794657Z"
     },
     "nbpresent": {
      "id": "c4d2ac07-1cf7-465f-9089-1b132459f980"
@@ -1601,8 +1616,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:22.366291Z",
-     "start_time": "2018-10-16T15:11:22.312123Z"
+     "end_time": "2018-10-17T10:14:12.046022Z",
+     "start_time": "2018-10-17T10:14:11.982979Z"
     },
     "nbpresent": {
      "id": "c7c0ae00-4061-4d28-a9da-419c4a11f21a"
@@ -1624,8 +1639,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:23.154774Z",
-     "start_time": "2018-10-16T15:11:23.149281Z"
+     "end_time": "2018-10-17T10:14:15.171061Z",
+     "start_time": "2018-10-17T10:14:15.166600Z"
     }
    },
    "outputs": [],
@@ -1639,8 +1654,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-16T15:11:24.133259Z",
-     "start_time": "2018-10-16T15:11:23.990581Z"
+     "end_time": "2018-10-17T10:16:02.591282Z",
+     "start_time": "2018-10-17T10:16:02.470133Z"
     },
     "nbpresent": {
      "id": "4f03a16d-a638-444e-881f-cbb26eac5685"
@@ -1649,7 +1664,7 @@
    "outputs": [],
    "source": [
     "# Display misclassified examples\n",
-    "N = 3\n",
+    "N = 1\n",
     "plt.matshow(Imisclass[N]) \n",
     "plt.show() \n",
     "print(\"prediction on image number\", N, \":\", digits_svc.predict([Xmisclass[N,:]]))\n",
@@ -1684,7 +1699,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.4"
+   "version": "3.6.4"
   },
   "toc": {
    "base_numbering": 1,
@@ -1695,7 +1710,12 @@
    "title_cell": "Table of Contents",
    "title_sidebar": "Contents",
    "toc_cell": false,
-   "toc_position": {},
+   "toc_position": {
+    "height": "calc(100% - 180px)",
+    "left": "10px",
+    "top": "150px",
+    "width": "165px"
+   },
    "toc_section_display": true,
    "toc_window_display": true
   }
