corrections on SVM, NBC and GP notebooks + added more resources for NBC class

--- a/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
+++ b/3 - SVMs, bias-variance, and kernels/Support Vector Machines, Bias-Variance tradeoff and an Introduction to Kernel Theory.ipynb
@@ -70,8 +70,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-17T07:10:40.712439Z",
-     "start_time": "2018-10-17T07:10:37.381320Z"
+     "end_time": "2018-10-22T08:52:30.192163Z",
+     "start_time": "2018-10-22T08:52:27.383571Z"
     },
     "nbpresent": {
      "id": "66f910f5-e213-4475-9479-db956975fa33"
@@ -117,8 +117,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-17T07:12:24.951353Z",
-     "start_time": "2018-10-17T07:12:24.663815Z"
+     "end_time": "2018-10-22T08:52:33.195069Z",
+     "start_time": "2018-10-22T08:52:32.907787Z"
     },
     "nbpresent": {
      "id": "bacb254c-c598-4484-b12f-d9c3b9c3a1d0"
@@ -186,8 +186,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-17T07:26:57.045626Z",
-     "start_time": "2018-10-17T07:26:57.039746Z"
+     "end_time": "2018-10-22T08:52:43.627053Z",
+     "start_time": "2018-10-22T08:52:43.620712Z"
     },
     "nbpresent": {
      "id": "a077da5d-794e-45b6-8349-db14f8f26612"
@@ -232,8 +232,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-17T07:45:10.585371Z",
-     "start_time": "2018-10-17T07:45:10.274759Z"
+     "end_time": "2018-10-22T08:53:25.430489Z",
+     "start_time": "2018-10-22T08:53:23.635288Z"
     },
     "nbpresent": {
      "id": "a263ab46-84c6-44ee-b063-a2d86d75f4c5"
@@ -296,8 +296,8 @@
    "execution_count": null,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2018-10-17T08:01:02.838601Z",
-     "start_time": "2018-10-17T08:01:02.539941Z"
+     "end_time": "2018-10-22T08:53:30.544490Z",
+     "start_time": "2018-10-22T08:53:30.250023Z"
     },
     "nbpresent": {
      "id": "768b9afa-8f8b-4c20-bbf3-09b3dcb501aa"
@@ -316,7 +316,7 @@
     "x0 = np.array([0.4,0.7,-1.])\n",
     "res = sopt.fmin_slsqp(func, x0, f_ieqcons=ineq_constr)\n",
     "print(res)\n",
-    "M = 1. / np.linalg.norm(np.array([res[1],res[2]]))\n",
+    "M = 1. # and not anymore M = 1. / np.linalg.norm(np.array([res[1],res[2]]))\n",
     "print(\"margin =\", M)\n",
     "fig=plt.figure(figsize=fig_size, dpi= 80, facecolor='w', edgecolor='k')\n",
     "plt.scatter(Xblue[:,0],Xblue[:,1],c='b')\n",
