--- a/5 - Gaussian Processes/Gaussian Processes.ipynb
+++ b/5 - Gaussian Processes/Gaussian Processes.ipynb
@@ -66,7 +66,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:43:01.038845Z",
+     "start_time": "2018-10-22T09:43:00.452866Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -95,7 +100,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:43:39.087948Z",
+     "start_time": "2018-10-22T09:43:38.702838Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from scipy.stats import multivariate_normal\n",
@@ -150,7 +160,7 @@
     "\n",
     "With this covariance function, the correlation between $y$ and $y'$ is high when $x$ and $x'$ are close. As $x$ and $x'$ get further from each other, $y$ and $y'$ tend to become independent.\n",
     "\n",
-    "Since we assume that the observed data $\\left\\{(x_i,y_i)\\right\\}_{i=1...N}$ is drawn from a Gaussian distribution and that any new point $(x,y)$ should be drawn from that distribution too, we can write:\n",
+    "Since we assume that the observed data $\\left\\{(x_i,y_i)\\right\\}_{i=1...N}$ are drawn from a Gaussian distribution and that any new point $(x,y)$ should be drawn from that distribution too, we can write:\n",
     "\n",
     "$$\\left[\\begin{array}{c}y_1\\\\ \\vdots\\\\y_N \\\\y \\end{array}\\right] \\sim \\mathcal{N}\\left( 0_{N+1}, \\left[\\begin{array}{cccc}\n",
     "k(x_1,x_1) & \\ldots & k(x_1,x_N) & k(x_1, x)\\\\ \n",
@@ -218,7 +228,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:52:39.187425Z",
+     "start_time": "2018-10-22T09:52:38.593206Z"
+    }
+   },
    "outputs": [],
    "source": [
     "def func(x):\n",
@@ -367,7 +382,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:55:33.305307Z",
+     "start_time": "2018-10-22T09:55:33.045809Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.gaussian_process import GaussianProcessRegressor\n",
@@ -380,7 +400,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:55:34.531164Z",
+     "start_time": "2018-10-22T09:55:34.171861Z"
+    }
+   },
    "outputs": [],
    "source": [
     "x = np.linspace(-5,10,100)\n",
@@ -429,7 +454,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:55:57.302801Z",
+     "start_time": "2018-10-22T09:55:56.751503Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.gaussian_process.kernels import WhiteKernel, ExpSineSquared\n",
@@ -714,6 +744,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
