--- a/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
+++ b/4 - Naive Bayes Classification/Naive Bayes Classification.ipynb
@@ -54,7 +54,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:11:39.746108Z",
+     "start_time": "2018-10-22T09:11:39.449038Z"
+    }
+   },
    "outputs": [],
    "source": [
     "import numpy as np\n",
@@ -99,7 +104,9 @@
     "\n",
     "As a matter of fact, estimating $\\mu$ and $\\Sigma$ without further hypothesis would require quite a lot of data, especially because $\\Sigma$ captures the **correlation** between $H$, $W$ and $F$.\n",
     "\n",
-    "Let's rephrase this. With some basic probabilities, we have:\n",
+    "$\\Sigma$ is a $3\\times 3$ matrix, so it involves 9 parameters to estimate, and we unfortunately only have 9 data points.\n",
+    "\n",
+    "Let's rephrase this from another perspective. With some basic probabilities, we have:\n",
     "\\begin{align*}\n",
     "\\mathbb{P}(H,W,F | S) = &\\mathbb{P}(H | S)\\\\\n",
     "& \\cdot \\mathbb{P}(W | S, H) \\\\\n",
@@ -140,7 +147,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:24:38.501571Z",
+     "start_time": "2018-10-22T09:24:37.759618Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code1.py\n",
@@ -162,7 +174,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:24:56.810525Z",
+     "start_time": "2018-10-22T09:24:56.803165Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code2.py\n",
@@ -210,7 +227,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:15.026191Z",
+     "start_time": "2018-10-22T09:38:14.489018Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.naive_bayes import GaussianNB\n",
@@ -238,7 +260,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:29.556873Z",
+     "start_time": "2018-10-22T09:38:19.312021Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sys import path\n",
@@ -263,7 +290,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:33.043849Z",
+     "start_time": "2018-10-22T09:38:32.839282Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code3.py\n",
@@ -294,7 +326,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:40.119702Z",
+     "start_time": "2018-10-22T09:38:39.892835Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# %load solutions/code4.py\n",
@@ -312,7 +349,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:44.118314Z",
+     "start_time": "2018-10-22T09:38:44.109117Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Retrain\n",
@@ -324,7 +366,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:46.271549Z",
+     "start_time": "2018-10-22T09:38:46.261982Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Find misclassified examples\n",
@@ -339,7 +386,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:47.999430Z",
+     "start_time": "2018-10-22T09:38:47.994562Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn.metrics import confusion_matrix\n",
@@ -352,6 +404,10 @@
    "cell_type": "code",
    "execution_count": null,
    "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:49.120635Z",
+     "start_time": "2018-10-22T09:38:49.107473Z"
+    },
     "scrolled": false
    },
    "outputs": [],
@@ -375,7 +431,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:55.186288Z",
+     "start_time": "2018-10-22T09:38:54.925939Z"
+    }
+   },
    "outputs": [],
    "source": [
     "from sklearn import datasets\n",
@@ -419,7 +480,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:56.908404Z",
+     "start_time": "2018-10-22T09:38:56.886588Z"
+    }
+   },
    "outputs": [],
    "source": [
     "print(Xtrain.shape)\n",
@@ -437,7 +503,12 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {},
+   "metadata": {
+    "ExecuteTime": {
+     "end_time": "2018-10-22T09:38:58.157554Z",
+     "start_time": "2018-10-22T09:38:58.034641Z"
+    }
+   },
    "outputs": [],
    "source": [
     "# Compute cross-validation score\n",
@@ -487,6 +558,19 @@
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
    "version": "3.6.4"
+  },
+  "toc": {
+   "base_numbering": 1,
+   "nav_menu": {},
+   "number_sections": true,
+   "sideBar": true,
+   "skip_h1_title": false,
+   "title_cell": "Table of Contents",
+   "title_sidebar": "Contents",
+   "toc_cell": false,
+   "toc_position": {},
+   "toc_section_display": true,
+   "toc_window_display": true
   }
  },
  "nbformat": 4,
